# Jonas_Pinigai

./: README.md  pyproject.toml
src/: __init__.py
src/backtest/: __init__.py  cli.py  engine.py  report.py
src/config/: __init__.py  settings.py
src/data/: __init__.py  historical.py
src/strategies/: __init__.py  moving_average.py
tests/: test_engine.py  test_report.py
