[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jonas-pinigai"
version = "0.1.0"
description = "Backtesting utilities and strategies"
authors = [{name = "Jonas Pinigai"}]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.23",
    "pandas-ta>=0.3.14b0",
    "requests>=2.31",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[tool.setuptools]
package-dir = {"" = "src"}
packages = {find = {where = ["src"]}}
